--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ body, ul, li, p{
 /* Define as características da TAG ancor */
 a{
     text-decoration: none;     /* tira o sublinhado do link */
-    color: white;            /* Cor do texto */
+    color: rgb(70, 19, 19);            /* Cor do texto */
 }
 
 /* Define as características do header */ 
 .header{
     /* Cor de fundo */
-    background-color: black;
+    background-color: rgb(78, 32, 32);
     /* display flexível */ 
     display: flex;
     /* Organizado em linha */
@@ -46,17 +46,79 @@ menu{
 .menu li a{
     display: block;
     padding: 10px;
-    background-color: aquamarine;
+    background-color: rgb(105, 95, 95);
 
 }
 
 /* ********************* FAZENDO O CORPO DO SITE************************* */
 
+.flex{
+    min-height: 100vh;
+    background-color: rgb(45, 60, 73);
+    display: flex;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+
+}
 /*  ajusando o tamanho da imagem */
 .imagem{ 
     width: 400px;
     height: auto;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.767);
+
+}
+.legenda{
+    text-align: center;
+    padding: 5px;
 }
 
-body{
-    background-color: pink(230, 230, 230);
+/* Ajustando o texto*/
+.texto{
+    width: 100%;
+    padding: 10px;
+    text-align: justify;
+    display: flex;
+    align-items: center;
+}
+
+.estagio{
+    display: block;
+    width: 100%;
+}
+.item{
+    display: flex;
+    margin: 10px;
+}
+
+/*Mudando a fonte do texto no parágrafo */
+.paragrafo{
+    width: 100%;
+    font-family: 'Popins', sans-serif;
+    font-family: 'raleway', sans-serif;
+    color: black;
+}
+
+
+/* Ajustando o rodapé*/
+
+.footer{
+    background-color: bisque;
+    padding: 15px;
+    color: blue;
+    font-size: 30px;
+}
+
+.redesSociais{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.redelogo{
+    margin: 10px;
+    padding: 5px;
+    width: 30px;
+    height: auto;
+}
