--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ body, ul, li, p{
 /* Define as características da TAG ancor */
 a{
     text-decoration: none;     /* tira o sublinhado do link */
-    color: rgb(70, 19, 19);            /* Cor do texto */
+    color: rgb(240, 232, 232);            /* Cor do texto */
 }
 
 /* Define as características do header */ 
 .header{
     /* Cor de fundo */
-    background-color: rgb(78, 32, 32);
+    background-color: rgba(136, 56, 56, 0.979);
     /* display flexível */ 
     display: flex;
     /* Organizado em linha */
@@ -34,8 +34,9 @@ a{
     padding: 20px;
 }
 
-menu{
+.menu{
     display: flex;
+   
 } 
 
 /* distância entre as palavras do link */
@@ -46,7 +47,7 @@ menu{
 .menu li a{
     display: block;
     padding: 10px;
-    background-color: rgb(105, 95, 95);
+    /* background-color: rgb(105, 95, 95); */
 
 }
 
@@ -54,7 +55,7 @@ menu{
 
 .flex{
     min-height: 100vh;
-    background-color: rgb(45, 60, 73);
+    background-color: rgb(83, 102, 119);
     display: flex;
     /* flex-direction: column; */
     flex-wrap: wrap;
@@ -97,6 +98,7 @@ menu{
     font-family: 'Popins', sans-serif;
     font-family: 'raleway', sans-serif;
     color: black;
+    padding: 15px;
 }
 
 
